--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 .atr-footer {
     align-items: center;
-    background: rgb(88, 66, 66);
+    background-color: rgb(218, 210, 109);
     display: inline-block;
     height: 785px;
     justify-content: center;
@@ -10,9 +10,117 @@
 .atr-footer-section {
     display: flex;
     flex-direction: column;
-    padding-top: 40px;
-    margin: 0 auto;
-    min-width: 1000px;
-    max-width: 1200px;
     height: 100%;
+    margin: 0 auto;
+    max-width: 1200px;
+    min-width: 1000px;
+    padding-top: 40px;
+}
+ .atr-footer-top {
+    display: grid;
+    grid-template-columns: repeat(4,25%);
+    height: 490px;
+    width: 100%;
+ }
+
+ .atr-column-footer-1 {
+    align-items: flex-start;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    height: 433px;
+    padding: 20px;
+    width: 100%;
+ }
+
+ .atr-column-footer-1 small {
+   font-size: 14px;
+   line-height: 18px;
+   color: #6C6C6C;
+   font-weight: bold;
+ }
+
+ .atr-border-column-space {
+    justify-content: space-between;
+ }
+
+ .atr-border {
+    border: 1px solid #3E88D7;
+ }
+
+ .atr-footer-title {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: bold;
+ }
+
+ .atr-color-title {
+   color: #3E88D7;
+ }
+
+ .atr-footer-span {
+   align-items: center;
+   background-color: #3E88D7;
+   border-radius: 40px;
+   color: white;
+   font-size: 14px;
+   line-height: 18px;
+   padding: 10px 15px; 
+ }
+
+ .atr-footer-span img{
+   margin-right: 5px;
+
+ }
+ 
+ .atr-column-footer-1 div {
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+ }
+
+ .atr-column-footer-1 div small{
+   color: #3E88D7;
+   font-weight: normal;
+ }
+
+.atr-small-2 {
+   color: #6C6C6C;
+   font-size: 11px;
+   width: 100%;
+}
+
+.atr-footer-section-list {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.atr-footer-section-list ul {
+   list-style: none;
+}
+
+.atr-footer-section-list ul li {
+   margin-bottom: 10px;
+}
+
+.atr-footer-section-list ul a {
+   margin-bottom: 10px;
+   text-decoration: none;
+   font-size: 14px;
+   line-height: 18px;
+   color: #646464;
+   font-weight: bold;
+}
+
+.atr-column-footer-2 {
+   align-items: flex-start;
+   background-color: #3E88D7;
+   border-radius: 20px;
+   display: flex;
+   flex-direction: column;
+   height: 433px;
+   padding: 28px;
+   width: 100%;
 }
