--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,7 @@
     display: inline-block;
     height: 161px;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .atr-header-content {
@@ -69,21 +70,15 @@
 
 .atr-logo {
     height: 55px;
-    margin-right: 20px;
     width: 155px; 
 }
 
-#atr-header-links {
-    margin-left: 20px;
-    font-size: 14px;
-    color: #3E88d7;
-}
-
-#atr-header-links a {
+.atr-header-links a {
     text-decoration: none;
     font-size: 14px;
     margin-left: 20px;
     font-weight: bold;
+    color: #3E88d7;
 }
 
 .atr-header-content-nav {
@@ -118,6 +113,7 @@
 @media (max-width: 730px) {
     .atr-header {
         height: 70px;
+        
     }
 
     .mw-header-content {
@@ -126,7 +122,7 @@
         max-width: unset;
         min-width: unset;
         padding: 0 20px;
-        width: 100%;
+        width: 100% !important;
     }
 
     .atr-header-content-top {
@@ -136,13 +132,14 @@
         padding: 0 5px;
     }
 
-    .atr-search {
+    .atr-search, .atr-header-links a{
         display: none;
     }
+
     .atr-logo {
         margin: 0;
     }
-
+    
     .atr-header-content-nav {
         display: none;
     }
