--- a/css/footer.css
+++ b/css/footer.css
@@ -217,22 +217,24 @@
    .atr-footer {
       display: flex;
       flex-direction: column;
-      overflow: auto;
       background-color: black;
-      height: 80%;
+      overflow: auto;
+      padding: 0 30px;
+      height: 100%;
+
    }
+
    .atr-footer-top {
       display: flex;
       flex-direction: column;
       width: 35%;
-      align-items: center;
-      margin: 0 10px;
+      
    }
 
    .column-1 {
       display: flex;
       flex-direction: column;
-      width: 100%;
+
    }
 
    .atr-footer-publi {
